test/visibility/import/enablesUnqualified/multipleUnqualified/no-call.good
no-call.chpl:6: syntax error: incorrect expression in 'import' for unqualified access, identifier expected
